--- a/artistPage.html
+++ b/artistPage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <link rel="stylesheet" href="css/styles.css">
@@ -37,4 +37,47 @@
     </div>
 </body>
 </html>
+ -->
 
+ <!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="css/style.css">
+    <title>{{.A.Name}} - Artist Information</title>
+</head>
+<body>
+    <h1>{{.A.Name}}</h1>
+    <img src="{{.A.Image}}" alt="{{.A.Name}}">
+    <h2>Members:</h2>
+    <ul>
+        {{range .A.Members}}
+        <li>{{.}}</li>
+        {{end}}
+    </ul>
+    <h2>Creation Date:</h2>
+    <p>{{.A.CreationDate}}</p>
+    <h2>First Album:</h2>
+    <p>{{.A.FirstAlbum}}</p>
+    <h2>Locations:</h2>
+    <ul>
+        {{range .L.Locations}}
+        <li>{{.}}</li>
+        {{end}}
+    </ul>
+    <h2>Dates:</h2>
+    <ul>
+        {{range .D.Dates}}
+        <li>{{.}}</li>
+        {{end}}
+    </ul>
+    <h2>Concerts:</h2>
+    {{range $key, $value := .R.DatesLocations}}
+    <h3>{{$key}}</h3>
+    <ul>
+        {{range $value}}
+        <li>{{.}}</li>
+        {{end}}
+    </ul>
+    {{end}}
+</body>
+</html>
